--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.2",
     "css-loader": "^7.1.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^3.0.1",
     "style-loader": "^4.0.0",
     "util": "^0.12.5",
     "web-vitals": "^2.1.4",
-    "webpack": "^5.92.1",
     "webpack-cli": "^5.1.4"
   },
   "scripts": {
